--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -365,7 +365,14 @@ input[type="text"].newSetName-Input::placeholder {
 	align-content: center;
 	width: 100%;
 	height: 50px;
-	z-index: 20;
+	z-index: 15;
+	background-color: none;
+	transition: background-color 300ms ease-in;
+}
+
+.headerActivityPage-home-scroll {
+	background-color: #E00F47;
+	/* #D6CCCC */
 }
 
 .keyline-home-0, .keyline-home-1 {
@@ -391,6 +398,7 @@ input[type="text"].newSetName-Input::placeholder {
 
 .login-a, .signUp-a {
 	display: inline-block;	
+	cursor: pointer;
 }
 
 
@@ -403,6 +411,7 @@ input[type="text"].newSetName-Input::placeholder {
 	height: 20px;
 	text-align: center;
 	font-family: 'Montserrat', sans-serif;
+	font-weight: lighter;
 }
 
 .inner-signUp {
@@ -413,6 +422,7 @@ input[type="text"].newSetName-Input::placeholder {
 	height: 20px;
 	text-align: center;
 	font-family: 'Montserrat', sans-serif;
+	font-weight: bolder;
 	border: solid white 1px;
 	padding-top: 3px;
 }
@@ -734,7 +744,9 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	width: 75%;
 	text-align: center;
 	margin-bottom: 60px;
+	margin-right: 10px;
 }
+
 
 .previousButton-home, .nextButton-home {
 	background-color: transparent;
@@ -746,11 +758,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	cursor: pointer;
 	color: white;
 	font-size: 35px;
-	text-align: center;
-}
-
-.fas {
-	padding-right: 10px;
+	text-align: left;
 }
 
 .sendButton-home {
@@ -817,6 +825,102 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	height: 360px;
 }
 
+.register-bar-header {
+	background-color: #D6CCCC;
+	width: 100%;
+	height: 0px;
+	visibility: hidden;
+	opacity: 0;
+	transition: height 300ms ease-in;
+	position: fixed;
+	z-index: 21;
+}
+
+.register-bar-header-show {
+	opacity: 1;
+	visibility: visible;
+	height: 100vh;
+}
+
+.register-bar-header-exit {
+	text-align: center;
+	width: 40px;
+	color: white;
+	margin: 5px;
+	padding: 5px;
+	font-weight: bold;
+	font-family: 'Thasadith', sans-serif;
+	font-size: 30px;
+	position: fixed;
+	z-index: 21;
+	top: 0;
+	right: 0;
+}
+
+.register-form-header {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.register-email-header {
+	width: 65%;
+	height: 40px;
+	margin: 150px 10px 5px 10px;
+	background-color: transparent;
+	border: solid white 2px;
+	color: white;
+}
+
+.register-user-header, .register-pass-header, .register-passConf-header {
+	width: 65%;
+	height: 40px;
+	margin: 5px;
+	background-color: transparent;
+	border: solid white 2px;
+	color: white;
+}
+
+.register-form-header input[type="text"]::placeholder {
+	color: white;
+	font-size: 14px;
+	font-family: 'Thasadith', sans-serif;
+	font-weight: normal;
+	padding: 5px 0px 5px 10px;
+}
+
+.register-submit-header {
+	background-color: red;
+	color: white;
+	font-size: 14px;
+	font-weight: bolder;
+	font-family: 'Thasadith', sans-serif;
+	width: 66%;
+	height: 45px;
+	margin: 5px;
+	border: solid white 2px;
+}
+
+.register-login-header {
+	background-color: transparent;
+	color: white;
+	font-size: 14px;
+	font-weight: bolder;
+	font-family: 'Thasadith', sans-serif;
+	width: 66%;
+	height: 45px;
+	margin: 5px;
+	border: solid white 2px;
+}
+
+#register-login-click-header {
+	font-weight: bolder;
+	color: white;
+	text-decoration: underline;
+}
+
 .register-form {
 	display: flex;
 	flex-direction: column;
@@ -825,12 +929,60 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	align-items: center;
 }
 
-.register-form input {
+.register-email {
 	width: 85%;
-	margin: 10px;
+	height: 20px;
+	margin: 20px 10px 5px 10px;
 	background-color: transparent;
-	border: solid white 1px;
+	border: solid white 2px;
 	color: white;
+}
+
+.register-user, .register-pass, .register-passConf {
+	width: 85%;
+	height: 20px;
+	margin: 5px;
+	background-color: transparent;
+	border: solid white 2px;
+	color: white;
+}
+
+.register-form input[type="text"]::placeholder {
+	color: white;
+	font-size: 14px;
+	font-family: 'Thasadith', sans-serif;
+	font-weight: normal;
+	padding: 5px 0px 5px 10px;
+}
+
+.register-submit {
+	background-color: red;
+	color: white;
+	font-size: 13px;
+	font-weight: bolder;
+	font-family: 'Montserrat', sans-serif;
+	width: 86%;
+	height: 25px;
+	margin: 5px;
+	border: solid white 2px;
+}
+
+.register-login {
+	background-color: transparent;
+	color: white;
+	font-size: 14px;
+	font-weight: bolder;
+	font-family: 'Thasadith', sans-serif;
+	width: 86%;
+	height: 25px;
+	margin: 5px;
+	border: solid white 2px;
+}
+
+#register-login-click {
+	font-weight: bolder;
+	color: white;
+	text-decoration: underline;
 }
 
 .footer-home {
