Migrated User Schema to models file

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -306,7 +306,7 @@
 			</div>
 			<img class="third-img" src="/images/IMG_3138.JPG" alt="SF Pink Flower"/>
 			<figcaption class="register-bar">
-				<form class="register-form">
+				<form class="register-form" method="POST" action="/">
 					<input id="register-email" class="register-email" type="text" name="email" placeholder="Email"/>
 					<input id="register-user" class="register-user" type="text" name="username" placeholder="Username"/>
 					<input id="register-pass" class="register-pass" type="text" name="password" placeholder="Password"/>
@@ -318,7 +318,7 @@
 		</figure>
 		<div class="register-bar-header">
 			<p class="register-bar-header-exit"> <i class="fas fa-times"></i> </p>
-			<form class="register-form-header">
+			<form class="register-form-header" method="POST" action="/">
 				<input id="register-email-header" class="register-email-header" type="text" name="email" placeholder="Email"/>
 				<input id="register-user-header" class="register-user-header" type="text" name="username" placeholder="Username"/>
 				<input id="register-pass-header" class="register-pass-header" type="text" name="password" placeholder="Password"/>
