--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -148,7 +148,8 @@ input[type="text"].searchBar-Input::placeholder {
 
 input:focus, textarea:focus {
     outline: none; /** For Safari, etc **/
-    border:1px solid gray; /** For Firefox **/
+    border: solid white 1px; /** For Firefox **/
+    text-align: center;
 }
 
 input[type="text"].newSetName-Input::placeholder {
@@ -825,6 +826,76 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	height: 360px;
 }
 
+.register-form {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.register-email {
+	width: 85%;
+	height: 20px;
+	margin: 20px 10px 5px 10px;
+	background-color: transparent;
+	border: solid white 2px;
+	color: white;
+	text-align: center;
+}
+
+.register-user, .register-pass, .register-passConf {
+	width: 85%;
+	height: 20px;
+	margin: 5px;
+	background-color: transparent;
+	border: solid white 2px;
+	color: white;
+	text-align: center;
+}
+
+.register-form input[type="text"]::placeholder {
+	color: white;
+	font-size: 14px;
+	font-family: 'Thasadith', sans-serif;
+	font-weight: normal;
+	padding: 5px 0px 5px 0px;
+	text-align: center;
+}
+
+.register-submit {
+	background-color: red;
+	color: white;
+	font-size: 13px;
+	font-weight: bolder;
+	font-family: 'Montserrat', sans-serif;
+	width: 86%;
+	height: 25px;
+	margin: 5px;
+	border: solid white 2px;
+	cursor: pointer;
+}
+
+.register-login {
+	background-color: transparent;
+	color: white;
+	font-size: 14px;
+	font-weight: bolder;
+	font-family: 'Thasadith', sans-serif;
+	width: 85%;
+	height: 25px;
+	margin: 5px;
+	border: solid white 2px;
+	text-align: center;
+}
+
+#register-login-click {
+	font-weight: bolder;
+	color: white;
+	text-decoration: underline;
+	cursor: pointer;
+}
+
 .register-bar-header {
 	background-color: #D6CCCC;
 	width: 100%;
@@ -855,6 +926,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	z-index: 21;
 	top: 0;
 	right: 0;
+	cursor: pointer;
 }
 
 .register-form-header {
@@ -872,6 +944,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	background-color: transparent;
 	border: solid white 2px;
 	color: white;
+	text-align: center;
 }
 
 .register-user-header, .register-pass-header, .register-passConf-header {
@@ -881,6 +954,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	background-color: transparent;
 	border: solid white 2px;
 	color: white;
+	text-align: center;
 }
 
 .register-form-header input[type="text"]::placeholder {
@@ -888,7 +962,8 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	font-size: 14px;
 	font-family: 'Thasadith', sans-serif;
 	font-weight: normal;
-	padding: 5px 0px 5px 10px;
+	padding: 5px 0px 5px 0px;
+	text-align: center;
 }
 
 .register-submit-header {
@@ -901,6 +976,7 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	height: 45px;
 	margin: 5px;
 	border: solid white 2px;
+	cursor: pointer;
 }
 
 .register-login-header {
@@ -909,19 +985,55 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	font-size: 14px;
 	font-weight: bolder;
 	font-family: 'Thasadith', sans-serif;
-	width: 66%;
-	height: 45px;
+	width: 65%;
+	height: 30px;
+	padding-top: 10px;
 	margin: 5px;
 	border: solid white 2px;
+	text-align: center;
 }
 
 #register-login-click-header {
 	font-weight: bolder;
 	color: white;
 	text-decoration: underline;
+	cursor: pointer;
 }
 
-.register-form {
+.login-bar-header {
+	background-color: #D6CCCC;
+	width: 100%;
+	height: 0px;
+	visibility: hidden;
+	opacity: 0;
+	transition: height 300ms ease-in;
+	position: fixed;
+	z-index: 21;
+}
+
+.login-bar-header-show {
+	opacity: 1;
+	visibility: visible;
+	height: 100vh;
+}
+
+.login-bar-header-exit {
+	text-align: center;
+	width: 40px;
+	color: white;
+	margin: 5px;
+	padding: 5px;
+	font-weight: bold;
+	font-family: 'Thasadith', sans-serif;
+	font-size: 30px;
+	position: fixed;
+	z-index: 21;
+	top: 0;
+	right: 0;
+	cursor: pointer;
+}
+
+.login-form-header {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
@@ -929,65 +1041,59 @@ input[type="text"].newCard-Term-home::placeholder, input[type="text"].newCard-De
 	align-items: center;
 }
 
-.register-email {
-	width: 85%;
-	height: 20px;
-	margin: 20px 10px 5px 10px;
+.login-email-header {
+	width: 65%;
+	height: 40px;
+	margin: 150px 10px 5px 10px;
 	background-color: transparent;
 	border: solid white 2px;
 	color: white;
+	text-align: center;
 }
 
-.register-user, .register-pass, .register-passConf {
-	width: 85%;
-	height: 20px;
+.login-pass-header {
+	width: 65%;
+	height: 40px;
 	margin: 5px;
 	background-color: transparent;
 	border: solid white 2px;
 	color: white;
+	text-align: center;
 }
 
-.register-form input[type="text"]::placeholder {
+.login-form-header input[type="text"]::placeholder {
 	color: white;
 	font-size: 14px;
 	font-family: 'Thasadith', sans-serif;
 	font-weight: normal;
-	padding: 5px 0px 5px 10px;
+	padding: 5px 0px 5px 0px;
 }
 
-.register-submit {
+.login-submit-header {
 	background-color: red;
-	color: white;
-	font-size: 13px;
-	font-weight: bolder;
-	font-family: 'Montserrat', sans-serif;
-	width: 86%;
-	height: 25px;
-	margin: 5px;
-	border: solid white 2px;
-}
-
-.register-login {
-	background-color: transparent;
 	color: white;
 	font-size: 14px;
 	font-weight: bolder;
 	font-family: 'Thasadith', sans-serif;
-	width: 86%;
-	height: 25px;
+	width: 66%;
+	height: 45px;
 	margin: 5px;
 	border: solid white 2px;
-}
-
-#register-login-click {
-	font-weight: bolder;
-	color: white;
-	text-decoration: underline;
+	cursor: pointer;
 }
 
 .footer-home {
 	width: 100%;
 	height: 400px;
+}
+
+.error {
+  border-color: red;
+}
+
+.error-message {
+  color: red;
+  font-style: italic;
 }
 
 
