--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -365,6 +365,8 @@ input[type="text"].newSetName-Input::placeholder {
 	flex-direction: row;
 	align-items: flex-end;
 	align-content: center;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 50px;
 	z-index: 15;
