--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -367,7 +367,7 @@ input[type="text"].newSetName-Input::placeholder {
 	flex-direction: row;
 	align-items: flex-end;
 	align-content: center;
-	width: 100vw;
+	width: 100%;
 	height: 50px;
 	z-index: 15;
 	background-color: none;
