--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -12,29 +12,31 @@
 <body>
 	<div class="home-container">
 		<div class="inner-container-0">
-			<div class="keyline-home-0"></div>
-			<header class="headerActivityPage-home">
-				<div class="nameOfSite">
-					<a class="nameOfSite-a" href="/flashHome"> 
-						<h1 class="nameOfSite-h1"> FlashPass </h1>
-					</a>
-				</div>
-				<div class="newSets-navBar">
-					<div class="login-signUp">
-						<div class="login-a">
-							<h3 class="inner-login">
-								Login
-							</h3>
-						</div>
-						<div class="signUp-a">
-							<h3 class="inner-signUp">
-								Sign up
-							</h3>
+			<div class="header">
+				<div class="keyline-home-0"></div>
+				<header class="headerActivityPage-home">
+					<div class="nameOfSite">
+						<a class="nameOfSite-a" href="/flashHome"> 
+							<h1 class="nameOfSite-h1"> FlashPass </h1>
+						</a>
+					</div>
+					<div class="newSets-navBar">
+						<div class="login-signUp">
+							<div class="login-a">
+								<h3 class="inner-login">
+									Login
+								</h3>
+							</div>
+							<div class="signUp-a">
+								<h3 class="inner-signUp">
+									Sign up
+								</h3>
+							</div>
 						</div>
 					</div>
-				</div>
-			</header>
-			<div class="keyline-home-1"></div>	
+				</header>
+				<div class="keyline-home-1"></div>	
+			</div>
 			<img class="first-img" src="/images/IMG_0945.JPG" alt="Tam background with cargo ship"/>
 			<div class="home-img-div">
 				<h2 class="home-img-text">
