--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -361,13 +361,6 @@ input[type="text"].newSetName-Input::placeholder {
 
 /* CSS for home.ejs */
 
-.header {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	align-content: center;
-}
-
 .headerActivityPage-home {
 	display: flex;
 	position: fixed;
@@ -387,6 +380,7 @@ input[type="text"].newSetName-Input::placeholder {
 }
 
 .keyline-home-0, .keyline-home-1 {
+	margin: 0 auto;
 	position: fixed;
 	width: 95vw;
 	height: 1px;
