--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -12,31 +12,29 @@
 <body>
 	<div class="home-container">
 		<div class="inner-container-0">
-				<div class="keyline-home-0"></div>
-				<header class="headerActivityPage-home">
-					<div class="header">
-						<div class="nameOfSite">
-							<a class="nameOfSite-a" href="/flashHome"> 
-								<h1 class="nameOfSite-h1"> FlashPass </h1>
-							</a>
-						</div>
-						<div class="newSets-navBar">
-							<div class="login-signUp">
-								<div class="login-a">
-									<h3 class="inner-login">
-										Login
-									</h3>
-								</div>
-								<div class="signUp-a">
-									<h3 class="inner-signUp">
-										Sign up
-									</h3>
-								</div>
+			<header class="headerActivityPage-home">
+				<div class="header">
+					<div class="nameOfSite">
+						<a class="nameOfSite-a" href="/flashHome"> 
+							<h1 class="nameOfSite-h1"> FlashPass </h1>
+						</a>
+					</div>
+					<div class="newSets-navBar">
+						<div class="login-signUp">
+							<div class="login-a">
+								<h3 class="inner-login">
+									Login
+								</h3>
+							</div>
+							<div class="signUp-a">
+								<h3 class="inner-signUp">
+									Sign up
+								</h3>
 							</div>
 						</div>
 					</div>
-				</header>
-				<div class="keyline-home-1"></div>	
+				</div>
+			</header>
 			<img class="first-img" src="/images/IMG_0945.JPG" alt="Tam background with cargo ship"/>
 			<div class="home-img-div">
 				<h2 class="home-img-text">
@@ -45,7 +43,7 @@
 				<div class="home-img-separator">
 				</div>
 				<h3 class="home-img-text2">
-					Generate flashcard sets of your own accord <br> or discover heplful sets from others.
+					Using the built-in study interface of FlashPass, <br> studying is made easy.
 				</h3>
 			</div>	
 		</div>
@@ -54,14 +52,14 @@
 			<div class="home-img-div-1">
 				<figcaption class="home-logOn-explain-div">
 					<h3 class="home-logOn-register">
-						Using the built-in study interface of FlashPass, <br> studying is made easy.
+						Generate flashcard sets of your own accord <br> or discover heplful sets from others.
 					</h3>
 				<div class="home-img-separator">
 				</div>
 				</figcaption>
 				<figcaption class="home-logOn-explain-div-1">
 					<h3 class="home-logOn-explain-1">
-						Imagine, create, practice.. <br> The potential is limitless. <br> Take learning into your own hands !
+						Study new vocabulary, new ideas, or concepts.. 
 					</h3>
 				</figcaption>
 			</div> 
@@ -69,12 +67,12 @@
 		<div class="inner-container-2">
 			<div class="home-logOn-div">
 				<h3 class="home-logOn-register">
-					 The build process of a new set <br> is designed to be swift. <br> Check out an example below !
+					 Imagine, create, practice.. <br> The potential is limitless. <br> Take learning into your own hands !
 				</h3>
 			</div>
 			<div class="home-term-explain-div-1">
 				<h3 class="home-logOn-explain-1">
-					Whether you're trying to learn new vocabulary, <br> study information for an upcoming exam, <br> or practice new concepts for personal benefit, <br> FlashPass makes organization trouble-free.
+					The build process of a new set is designed <br> to be navigated seamlessly. <br> Check out an example below !
 				</h3>
 			</div>
 			<div class="home-img-separator">
