--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -117,8 +117,8 @@
 				</div>
 			</div>
 			<div id="cardButtons" class="cardButtons-home">
-					<button id="previousButton-home" class="previousButton-home"> <i id="previousButton-home" class="fas fa-chevron-left"></i> </button>
-					<button id="nextButton-home" class="nextButton-home"> <i id="nextButton-home" class="fas fa-chevron-right"></i> </button>
+					<span id="previousButton-home" class="previousButton-home"> <i id="previousButton-home" class="fas fa-chevron-left"></i> </span>
+					<span id="nextButton-home" class="nextButton-home"> <i id="nextButton-home" class="fas fa-chevron-right"></i> </span>
 			</div>
 		</div>
 		<figure class="inner-container-3">
